NewArchive/1ccd4b41da3e61d57e503e0df2dc4cea-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In instantiation of 'void do_foo(T, is_integer<false>) [with T = double]':
main.cpp:19:55:   required from 'void foo(T) [with T = double]'
main.cpp:25:12:   required from here
main.cpp:13:5: error: static assertion failed: T is not int!
     static_assert(!sizeof(T), "T is not int!");
     ^
